--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,1 +1,47 @@
-{"editor.fontSize": 14}
+{
+    "editor.quickSuggestions": {
+        "comments": "on",
+        "strings": "on"
+    },
+    "typescript.suggest.paths": false,
+    "javascript.suggest.paths": false,
+    "[markdown]": {
+        "editor.quickSuggestions": {
+            "comments": "on",
+            "strings": "on",
+            "other": "on"
+        }
+    },
+    "yaml.schemas": {
+        "file:///c%3A/Users/rishi/.vscode/extensions/atlassian.atlascode-3.8.4/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+    },
+    "diffEditor.ignoreTrimWhitespace": false,
+
+    // Added to show hidden files, including .git
+    "files.exclude": {
+        "**/.git": false
+    },
+    "githubPullRequests.pullBranch": "never",
+    "terminal.integrated.allowChords": false,
+    "terminal.integrated.allowMnemonics": true,
+
+    // Enable Ctrl+C for copy in terminal
+    "terminal.integrated.copyOnSelection": true,
+    "terminal.integrated.commandsToSkipShell": [
+        "workbench.action.terminal.copySelection"
+    ],
+    "git.ignoreRebaseWarning": true,
+    "atlascode.jira.lastCreateSiteAndProject": {
+        "siteId": "",
+        "projectKey": ""
+    },
+
+    // WSL terminal defaults
+    "terminal.integrated.defaultProfile.windows": "Ubuntu-22.04",
+    "terminal.integrated.profiles.windows": {
+        "Ubuntu-22.04": {
+            "path": "C:\\WINDOWS\\System32\\wsl.exe",
+            "args": ["-d", "Ubuntu-22.04"]
+        }
+    }
+}
