--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -53,5 +53,6 @@
         "/Users/rishikesh/.vscode/extensions/continue.continue-1.0.19-darwin-arm64/config-yaml-schema.json": [
             ".continue/**/*.yaml"
         ]
-    }
+    },
+    "pylint.enabled": false
 }
