--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -54,5 +54,20 @@
             ".continue/**/*.yaml"
         ]
     },
-    "pylint.enabled": false
+    "pylint.enabled": false,
+    "[dockercompose]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 2,
+        "editor.autoIndent": "advanced",
+        "editor.quickSuggestions": {
+            "other": true,
+            "comments": false,
+            "strings": true
+        },
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "[github-actions-workflow]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "makefile.configureOnOpen": true
 }
